# CodexForge

./: .codexforgeignore  .gitignore  .glacialignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md
backend/: glacial-backend.spec
backend/app/: activity.py  agents.py  agents_write.py  changelog.py  config.py  database.py  dependency_trust.py  desktop_entry.py  finding_evidence.py  finding_reviews.py  main.py  review_checkpoints.py  safety.py  scan_comparison.py  scanner.py  schemas.py  trusted_dependency_baseline.py  trusted_scan_baseline.py
backend/tests/: test_agents.py  test_config.py  test_dependency_trust.py  test_desktop_runtime.py  test_finding_reviews.py  test_project_lifecycle.py  test_review_checkpoints.py  test_safety.py  test_scan_comparison.py  test_scan_completeness.py  test_scanner.py  test_trusted_dependency_baseline.py  test_trusted_scan_baseline.py
docs/: windows-release-signing.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: startup-error.html  startup-error.js
frontend/src/: App.integration.test.js  ProjectExpectations.jsx  activity.js  apiConfig.test.js  apiTransport.js  apiTransport.test.js  dependencyTrust.js  dependencyTrust.test.js  findingReviews.js  findingReviews.test.js  findingWorkbench.js  findingWorkbench.test.js  main.jsx  projectDrift.js  projectDrift.test.js  projectExpectations.js  (+18 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: api_bridge.rs  backend.rs  main.rs  windows_job.rs
(+8 files in other folders)
