[package]
name = "glacial"
version = "0.2.0"
description = "Glacial Windows desktop application"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-single-instance = "=2.4.2"
